2006-11-11  Thomas Moschny  <thomas.moschny@gmx.de>

	* rev_height.hh, rev_height.cc: remove the dump method, add an
	overload to the dump function to make heights work with MM().
	* database.cc (put_height_for_revision): Add some MM() calls.
	
2006-11-11  Nathaniel Smith  <njs@pobox.com>

	* notes/: New directory for developer docs.
	* notes/release-checklist.txt: Neaten up my release checklist and
	commit it.
	* tests/README, tester.txt, testsuite.txt: Move to notes/.
	* HACKING: Add a mention of notes/.

2006-11-11  Nathaniel Smith  <njs@pobox.com>

	* NEWS: Set release date.

2006-11-10  Nathaniel Smith  <njs@pobox.com>

	* debian/control (Build-Depends): Remove
	libboost-program-options-dev.

2006-11-10  Nathaniel Smith  <njs@pobox.com>

	* UPGRADE, configure.ac, monotone.spec, debian/changelog:
	* win32/monotone.iss, visualc/config.h: Bump version numbers to
	0.31.

2006-11-10  Nathaniel Smith  <njs@pobox.com>

	* INSTALL: Remove libboost-program-options-dev from the list of
	debian packages.

	* NEWS: First draft of 0.31 release notes.
	
2006-11-06  Thomas Keller <me@thomaskeller.biz>

	Improved error message for invalid uri's (per bug #17736)

2006-11-03  Richard Levitte  <richard@levitte.org>

	* cert.cc (get_user_key): app.opts.key_given is only true when
	-k is given.  However, the signing key may be given in
	_MTN/options as well, and that should be respected.

2006-11-02  Timothy Brownawell  <tbrownaw@gmail.com>

	Make add non-recursive by default, and also give it a
	--no-respect-ignore switch.

2006-11-03  Daniel Carosone  <dan@geek.com.au>

	Tidy up some description of certs and the tag command:
	 * mention the purpose of tag certs
	 * remove stale mention of file certs in the description of "comment"
	 * move "mtn cert" to the certificate section, together with all the
	   things that are synonyms for it.
	 * rename the "key and cert" section accordingly
	 * add a "tag" section to the cvs phrasebook.
