@@ -1697,7 +1697,7 @@ regenerate_caches(app_state & app)
 }
 
 CMD(rev_height, hidden_group(), N_("REV"), "show the height for REV",
-    option::none)
+    options::opts::none)
 {
   if (args.size() != 1)
     throw usage(name);
